--- a/Advertising2.conf
+++ b/Advertising2.conf
@@ -1,4 +1,4 @@
-hostname = -lark-frontier-hl.snssdk.com,*account.wps.cn,*account.wps.com,pan.baidu.com,c.tieba.baidu.com,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,gw.kaola.com,api-new.app.acfun.cn,api.bjxkhc.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,app.bilibili.com,manga.bilibili.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,app.badmintoncn.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,www.cntv.com,cap.caocaokeji.cn,api.caijingmobile.com,app-gw.csdn.net,m.ctrip.com,app.dewu.com,api.douban.com,rtbapi.douyucdn.cn,api.dangdang.com,e.dangdang.com,daoyu.sdo.com,capis*.didapinche.com,maicai.api.ddxq.mobi,mobileapi-v6.elong.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,*-release.wuta-cam.com,gateway.shouqiev.com,dl.app.gtja.com,smkmp.96225.com,business.msstatic.com,imeclient.openspeech.cn,webboot.zhangyue.com,nnapp.cloudbae.cn,icc.one,jxd524.github.io,ib-soft.net,www.inoreader.com,list-app-m.i4.cn,api.m.jd.com,api.jxedt.com,*.kakamobi.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.club.lenovo.cn,api.m.mi.com,api.jr.mi.com,api-mifit.huami.com,home.mi.com,api.mgzf.com,flowplus.meituan.net,capi.mwee.cn,v?-api.miaopai.com,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,interface*.music.163.com,support.you.163.com,p.du.163.com,app-api.niu.com,gfp.veta.naver.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,api.pinduoduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,magev6.if.qidian.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,tqt.weibo.cn,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,sh-gateway.shihuo.cn,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,shopic.sf-express.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,m.tuniu.com,img*.10101111cdn.com,msg.umengcloud.com,api.vuevideo.net,api.vistopia.com.cn,thor.weidian.com,api.waitwaitpay.com,api-one.wallstcn.com,api.xiachufang.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,101.201.175.228,www.xiaohongshu.com,api.yizhibo.com,www.zhihu.com,api.zhihu.com,103.41.167.*,a.qiumibao.com,*.zhuishushenqi.com,syh.zybang.com,api.izuiyou.com,tiku.zhan.com,weixin110.qq.com,mapi.weibo.com,
+hostname = www.google.cn,pan.baidu.com,*account.wps.cn,*account.wps.com,boxer.baidu.com,www.firefox.com.cn,api.abema.io,app.biliintl.com,passport.biliintl.com,*.amemv.com, *.snssdk.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,m,app.bilibili.com,-lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,gw.kaola.com,api-new.app.acfun.cn,api.bjxkhc.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,app.bilibili.com,manga.bilibili.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,app.badmintoncn.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,www.cntv.com,cap.caocaokeji.cn,api.caijingmobile.com,app-gw.csdn.net,m.ctrip.com,app.dewu.com,api.douban.com,rtbapi.douyucdn.cn,api.dangdang.com,e.dangdang.com,daoyu.sdo.com,capis*.didapinche.com,maicai.api.ddxq.mobi,mobileapi-v6.elong.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,*-release.wuta-cam.com,gateway.shouqiev.com,dl.app.gtja.com,smkmp.96225.com,business.msstatic.com,imeclient.openspeech.cn,webboot.zhangyue.com,nnapp.cloudbae.cn,icc.one,jxd524.github.io,ib-soft.net,www.inoreader.com,list-app-m.i4.cn,api.m.jd.com,api.jxedt.com,*.kakamobi.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.club.lenovo.cn,api.m.mi.com,api.jr.mi.com,api-mifit.huami.com,home.mi.com,api.mgzf.com,flowplus.meituan.net,capi.mwee.cn,v?-api.miaopai.com,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,interface*.music.163.com,support.you.163.com,p.du.163.com,app-api.niu.com,gfp.veta.naver.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,api.pinduoduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,magev6.if.qidian.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,tqt.weibo.cn,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,sh-gateway.shihuo.cn,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,shopic.sf-express.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,m.tuniu.com,img*.10101111cdn.com,msg.umengcloud.com,api.vuevideo.net,api.vistopia.com.cn,thor.weidian.com,api.waitwaitpay.com,api-one.wallstcn.com,api.xiachufang.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,101.201.175.228,www.xiaohongshu.com,api.yizhibo.com,www.zhihu.com,api.zhihu.com,103.41.167.*,a.qiumibao.com,*.zhuishushenqi.com,syh.zybang.com,api.izuiyou.com,tiku.zhan.com
 
 # WPS (By eHpo)
 ^https?:\/\/[a-z-]*account\.wps\.c(n|om)(:\d+|)\/api\/users url script-response-body https://raw.githubusercontent.com/re2/g/master/wps.js
@@ -6,31 +6,80 @@ hostname = -lark-frontier-hl.snssdk.com,*account.wps.cn,*account.wps.com,pan.bai
 # 百度超级会员
 https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/re2/g/master/BaiduCloud.js
 
-# bilibili去广告(iOS15)
-# 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告,相关推荐广告)
-^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/re2/g/master/bilibili-json.js
-^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/re2/g/master/bilibili-proto.js
+# 百度搜索防跳转
+^https?\:\/\/boxer\.baidu\.com\/scheme\?scheme url script-response-body https://raw.githubusercontent.com/re2/g/master/baidu-no-redirect.js
 
 # ---(By yichahucha)---
 # > Weibo - api.weibo.cn,mapi.weibo.com
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/re2/g/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/re2/g/master/wb_ad.js
-# > WeChat
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/re2/g/master/WeChat.js
+# ------
 
-# 解除微信链接限制
-^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/re2/g/master/UnblockURLinWeChat.js
+# ---(By blackmatrix7)---
+# > Zhihu
+# 知乎处理用户信息
+^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎信息流去广告
+^https?:\/\/api\.zhihu\.com\/(moments|topstory)(\/|\?)?(recommend|action=|feed_type=)(?!\/people) url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎回答列表去广告
+^https?:\/\/api\.zhihu\.com\/v4\/questions url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎获取黑名单
+^https?:\/\/api\.zhihu\.com\/settings\/blocked_users url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎官方消息去广告
+^https?:\/\/api\.zhihu\.com\/notifications\/v3\/(message\?|timeline\/entry\/system_message) url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎预置关键词去广告
+^https?:\/\/api\.zhihu\.com\/search\/preset_words\? url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 优化软件配置
+^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎热搜去广告
+^https?:\/\/api\.zhihu\.com\/search\/top_search\/tabs\/hot\/items url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎热榜去广告
+^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎评论去广告
+^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎回答内容优化
+^https?:\/\/www\.zhihu\.com\/appview\/v2\/answer\/.*(entry=(?!(preload-topstory|preload-search|preload-subscription)))? url script-response-body https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎屏蔽关键词解锁
+^https?:\/\/api\.zhihu\.com\/feed-root\/block url script-analyze-echo-response https://raw.githubusercontent.com/re2/g/master/zhihu_plus.js
+# 知乎去除最常访问
+^https?:\/\/api\.zhihu\.com\/moments\/recent url reject-dict
+# 知乎去除回答下的广告
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations url reject-dict
+# 知乎其他广告拦截
+^https?:\/\/api\.zhihu\.com\/(notifications\/v3\/count|v3\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|.*featured-comment-ad) url reject-dict
+# 知乎拦截部分预加载
+^https?:\/\/www\.zhihu\.com\/appview\/(p|v2\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject-dict
+# 知乎网页版去广告
+^https?:\/\/www\.zhihu\.com\/api\/v4/(questions|anwsers)\/\d+/related-readings url reject-dict
+^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation url reject-dict
+^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject-dict
+^https?:\/\/zhuanlan\.zhihu\.com\/api\/articles\/\d+\/recommendation url reject-dict
+# 知乎品牌提问广告
+^https?:\/\/api\.zhihu\.com\/brand\/question\/\d+/card\? url reject-dict
+^https?:\/\/www\.zhihu\.com\/api\/v\d+\/brand\/question/\d+/card\? url reject-dict
+# 屏蔽消息页面上拉的用户精选
+^https?:\/\/api\.zhihu\.com/moments/hybrid\? url reject-dict
+# 知乎下发的配置，如皮肤等，目前已知会导致Tab页管理功能失效
+^https?:\/\/api\.zhihu\.com\/ab\/api\/v1\/products\/zhihu\/platforms\/ios\/config url reject-200
 
-# 京东比价
-# 比价信息显示在商品下方
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/re2/g/master/jd_price.js
+# ---(By srk24)---
+# > bilibili
+#^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/re2/g/master/bilibili_splash.js
+# ------
 
-# 淘宝比价
-# 历史价格在“保障”中显示，需要点击“保障”才能看到，和京东不一样
-# “保障”显示在商品下方
-# 如果还是不显示，那就把app卸载重新安装
-^http://.+/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/re2/g/master/tb_price.js
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) url 302 $1$2$3
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
+
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v\d\/player\/ad_break url reject
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
+
+# ---(By Choler)---
+# > Aweme(<= 16.2.0) - api*.amemv.com,aweme.snssdk.com
+https?:\/\/(.+?)\.amemv\.com\/aweme\/v2\/feed\/ url request-header GET \/aweme\/v\d\/(.+\r\n) request-header GET /aweme/v1/$1
+
+https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https://raw.githubusercontent.com/re2/g/master/douyin.js
 
 # > WeChat Official Account
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
@@ -469,3 +518,89 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/api\.izuiyou\.com\/ad\/ url reject
 # > Zhan - tiku.zhan.com
 ^https?:\/\/tiku\.zhan\.com\/Common\/newAd\/ url reject
+# ------
+# Redirect Google Search Service
+^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+
+# Redirect Google Maps Service
+^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
+
+# Redirect HTTP to HTTPS
+^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
+^https?:\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
+^https?:\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
+^https?:\/\/you\.163\.com\/ url 302 https://you.163.com/
+^https?:\/\/(www.)?suning\.com\/ url 302 https://suning.com/
+^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
+
+# Redirect False to True
+# > Firefox - www.firefox.com.cn
+^https?:\/\/(www.)?firefox\.com\.cn\/(download\/)?$ url 302 https://www.mozilla.org/zh-CN/firefox/new/
+# > IGN China to IGN Global
+^https?:\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
+# > Fake Website Made By C&J Marketing
+^https?:\/\/(www.)?abbyychina\.com\/ url 302 https://www.abbyy.cn/
+^https?:\/\/(www.)?alienskins\.cn\/ url 302 https://exposure.software/
+^https?:\/\/(www.)?anydeskchina\.cn\/ url 302 https://anydesk.com/zhs
+^https?:\/\/(www.)?bartender\.cc\/ url 302 https://www.macbartender.com/
+^https?:\/\/(www.)?(betterzipcn|betterzip)\.(com|net)\/ url 302 https://macitbetter.com/
+^https?:\/\/(www.)?beyondcompare\.cc\/ url 302 https://www.scootersoftware.com/
+^https?:\/\/(www.)?bingdianhuanyuan\.cn\/ url 302 https://www.faronics.com/zh-hans/products/deep-freeze
+^https?:\/\/(www.)?chemdraw\.com\.cn\/ url 302 https://www.perkinelmer.com.cn/
+^https?:\/\/(www.)?codesoftchina\.com\/ url 302 https://www.teklynx.com/
+^https?:\/\/(www.)?coreldrawchina\.com\/ url 302 https://www.coreldraw.com/cn/
+^https?:\/\/(www.)?crossoverchina\.com\/ url 302 https://www.codeweavers.com/
+^https?:\/\/(www.)?dongmansoft\.com\/ url 302 https://www.udongman.cn/
+^https?:\/\/(www.)?earmasterchina\.cn\/ url 302 https://www.earmaster.com/
+^https?:\/\/(www.)?easyrecoverychina\.com\/ url 302 https://www.ontrack.com/
+^https?:\/\/(www.)?ediuschina\.com\/ url 302 https://www.grassvalley.com/
+^https?:\/\/(www.)?flstudiochina\.com\/ url 302 https://www.image-line.com/
+^https?:\/\/(www.)?folxchina\.cn\/ url 302 https://mac.eltima.com/cn/download-manager.html
+^https?:\/\/(www.)?formysql\.com\/ url 302 https://www.navicat.com.cn/
+^https?:\/\/(www.)?guitarpro\.cc\/ url 302 https://www.guitar-pro.com/
+^https?:\/\/(www.)?huishenghuiying\.com\.cn\/ url 302 https://www.coreldraw.com/cn/
+^https?:\/\/(www.)?hypeapp\.cn\/ url 302 https://tumult.com/hype/
+^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
+^https?:\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
+^https?:\/\/(www.)?idmchina\.net\/ url 302 https://www.internetdownloadmanager.com/
+^https?:\/\/(www.)?imazingchina\.com\/ url 302 https://imazing.com/zh
+^https?:\/\/(www.)?imindmap\.cc\/ url 302 https://www.ayoa.com/previously-imindmap/
+^https?:\/\/(www.)?jihehuaban\.com\.cn\/ url 302 https://www.chartwellyorke.com/sketchpad/x24795.html
+^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.keyshot.com/
+^https?:\/\/(www.)?kingdeecn\.cn\/ url 302 http://www.kingdee.com/
+^https?:\/\/(www.)?logoshejishi\.com url 302 https://www.sothink.com/product/logo-design-software/
+^https?:\/\/logoshejishi\.mairuan\.com\/ url 302 https://www.sothink.com/product/logo-design-software/
+^https?:\/\/(www.)?luping\.net\.cn\/ url 302 https://www.techsmith.com/
+^https?:\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
+^https?:\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
+^https?:\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
+^https?:\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
+^https?:\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
+^https?:\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
+^https?:\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
+^https?:\/\/(www.)?officesoftcn\.com\/ url 302 https://www.microsoft.com/zh-cn/microsoft-365
+^https?:\/\/(www.)?overturechina\.com\/ url 302 https://sonicscores.com/
+^https?:\/\/(www.)?passwordrecovery\.cn\/ url 302 https://cn.elcomsoft.com/aopr.html
+^https?:\/\/(www.)?pdfexpert\.cc\/ url 302 https://pdfexpert.com/zh
+^https?:\/\/(www.)?photozoomchina\.com\/ url 302 https://www.benvista.com/
+^https?:\/\/(www.)?shankejingling\.com\/ url 302 https://www.sothink.com/product/flashdecompiler/
+^https?:\/\/cn\.ultraiso\.net\/ url 302 https://cn.ezbsystems.com/ultraiso/
+^https?:\/\/(www.)?vegaschina\.cn\/ url 302 https://www.vegascreativesoftware.com/
+^https?:\/\/(www.)?xshellcn\.com\/ url 302 https://www.netsarang.com/zh/xshell/
+^https?:\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
+^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
+^https?:\/\/(www.)?anydeskchina.cn/ url 302 https://anydesk.com/zhs
+
+# AbeamTV
+^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
+
+# bstar intl
+(^https?:\/\/app\.biliintl\.com\/(x\/)?(intl|dm|reply|history|v\d\/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
+
+^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/(sms\/send|reg\/sms|oauth2\/access_token|login\/sms) url script-request-body https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Rewrite/bstar.js
+(^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
+
+^https?:\/\/app\.biliintl\.com\/(intl\/gateway\/v\d\/app\/data\/report\/heartbeat\/mobile|x\/(history|reply)/v\d/add) url script-request-body https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Rewrite/bstar.js
+
+# AICoin
+^http:\/\/(www.)?aicoin\.cn\/$ url 302 https://www.aicoin.com/
