--- a/Advertising.conf
+++ b/Advertising.conf
@@ -1,4 +1,4 @@
-hostname = image.spdbccc.com.cn, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, pan.baidu.com, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com,boxer.baidu.com,www.firefox.com.cn,api.abema.io,app.biliintl.com,passport.biliintl.com,*.snssdk.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,m,app.bilibili.com,-lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,gw.kaola.com,api-new.app.acfun.cn,api.bjxkhc.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,app.bilibili.com,manga.bilibili.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,app.badmintoncn.com,client.app.coc.10086.cn, m.client.10010.com, cloud.189.cn, www.cntv.com,cap.caocaokeji.cn,api.caijingmobile.com,app-gw.csdn.net,m.ctrip.com,app.dewu.com,api.douban.com,rtbapi.douyucdn.cn,api.dangdang.com,e.dangdang.com,daoyu.sdo.com,capis*.didapinche.com,maicai.api.ddxq.mobi,mobileapi-v6.elong.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,*-release.wuta-cam.com,gateway.shouqiev.com,dl.app.gtja.com,smkmp.96225.com,business.msstatic.com,imeclient.openspeech.cn,webboot.zhangyue.com,nnapp.cloudbae.cn,icc.one,jxd524.github.io,ib-soft.net,www.inoreader.com,list-app-m.i4.cn,api.m.jd.com,api.jxedt.com,*.kakamobi.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.club.lenovo.cn,api.m.mi.com,api.jr.mi.com,api-mifit.huami.com,home.mi.com,api.mgzf.com,flowplus.meituan.net,capi.mwee.cn,v?-api.miaopai.com,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,interface*.music.163.com,support.you.163.com,p.du.163.com,app-api.niu.com,gfp.veta.naver.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,api.pinduoduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,magev6.if.qidian.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,tqt.weibo.cn,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,sh-gateway.shihuo.cn,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,shopic.sf-express.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,m.tuniu.com,img*.10101111cdn.com,msg.umengcloud.com,api.vuevideo.net,api.vistopia.com.cn,thor.weidian.com,api.waitwaitpay.com,api-one.wallstcn.com,api.xiachufang.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,101.201.175.228,www.xiaohongshu.com,api.yizhibo.com,www.zhihu.com,api.zhihu.com,103.41.167.*,a.qiumibao.com,*.zhuishushenqi.com,syh.zybang.com,api.izuiyou.com,tiku.zhan.com,m.baidu.com, www.baidu.com, zhidao.baidu.com
+hostname = api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com,image.spdbccc.com.cn, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, pan.baidu.com, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com,boxer.baidu.com,www.firefox.com.cn,api.abema.io,app.biliintl.com,passport.biliintl.com,*.snssdk.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,m,app.bilibili.com,-lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,gw.kaola.com,api-new.app.acfun.cn,api.bjxkhc.com,issuecdn.baidupcs.com,newclient.map.baidu.com,mime.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,app.bilibili.com,manga.bilibili.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,app.badmintoncn.com,client.app.coc.10086.cn, m.client.10010.com, cloud.189.cn, www.cntv.com,cap.caocaokeji.cn,api.caijingmobile.com,app-gw.csdn.net,m.ctrip.com,app.dewu.com,api.douban.com,rtbapi.douyucdn.cn,api.dangdang.com,e.dangdang.com,daoyu.sdo.com,capis*.didapinche.com,maicai.api.ddxq.mobi,mobileapi-v6.elong.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,*-release.wuta-cam.com,gateway.shouqiev.com,dl.app.gtja.com,smkmp.96225.com,business.msstatic.com,imeclient.openspeech.cn,webboot.zhangyue.com,nnapp.cloudbae.cn,icc.one,jxd524.github.io,ib-soft.net,www.inoreader.com,list-app-m.i4.cn,api.m.jd.com,api.jxedt.com,*.kakamobi.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,api.club.lenovo.cn,api.m.mi.com,api.jr.mi.com,api-mifit.huami.com,home.mi.com,api.mgzf.com,flowplus.meituan.net,capi.mwee.cn,v?-api.miaopai.com,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,interface*.music.163.com,support.you.163.com,p.du.163.com,app-api.niu.com,gfp.veta.naver.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,api.pinduoduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,magev6.if.qidian.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,tqt.weibo.cn,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,sh-gateway.shihuo.cn,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,shopic.sf-express.com,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,m.tuniu.com,img*.10101111cdn.com,msg.umengcloud.com,api.vuevideo.net,api.vistopia.com.cn,thor.weidian.com,api.waitwaitpay.com,api-one.wallstcn.com,api.xiachufang.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,101.201.175.228,www.xiaohongshu.com,api.yizhibo.com,www.zhihu.com,api.zhihu.com,103.41.167.*,a.qiumibao.com,*.zhuishushenqi.com,syh.zybang.com,api.izuiyou.com,tiku.zhan.com,m.baidu.com, www.baidu.com, zhidao.baidu.com
 
 # > 买单吧 （一小部分误杀，应该不影响使用，不用频繁更新）
 ^https?:\/\/creditcardapp\.bankcomm\.com\/mapp\/common\/queryGuidePageAds\.do$ url reject-200
@@ -50,6 +50,59 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?://weibointl\.api\.weibo\.cn/portal\.php\?a=get_coopen_ads url script-response-body https://raw.githubusercontent.com/re2/g/master/weibointl_launch.js
 ^https?://api\.weibo\.cn/2/(statuses|groups)/(unread_hot_|friends_)?timeline url script-response-body https://raw.githubusercontent.com/re2/g/master/weibointl_timeline.js
 # ------
+
+
+# > 微博_未登陆状态下首页信息流处理@re2
+^https?:\/\/api\.weibo\.cn\/\d\/\w{5}\/(statuses_unread_hot_timeline|timeline) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博_每日一次的开屏广告请求@re2
+^https?:\/\/boot\.biz\.weibo\.com\/v1\/ad\/realtime url reject-200
+# > 微博_视频信息处理@re2
+^https?:\/\/api\.weibo\.cn\/\d\/video\/tiny_stream_mid_detail url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博_去除底部超话栏表层浮icon及tips@re2
+^https?:\/\/api\.weibo\.cn\/\d\/!\/huati\/discovery_home_bottom_getdotinfo url reject-dict
+# > 微博_屏蔽首页左上角每日的弹窗tips@re2
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d/push/daily url reject-dict
+# > 微博_屏蔽发现页面搜索框热词@re2
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/\w{5}\/cardlist url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博_应用内弹窗广告@re2
+^https?:\/\/(preload-click|preload-impression)\.uve\.weibo\.com\/(interface\/wbpullad\/wbpullad_click\.php|wbapplua\/get_wbpullad_log\.lua) url reject
+# > 微博_屏蔽sdkconfig请求@re2
+^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/sdkconfig\.php url reject
+# > 微博_Spotlight@re2
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/hot\/hours_spotlight url reject-dict
+# > 微博_自定义tab皮肤@zmqcherish
+^https://api.weibo.cn/2/!/client/light_skin url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博_非会员设置tab皮肤@zmqcherish
+^https://new.vip.weibo.cn/littleskin/preview url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博_去广告以及去除各部分推广模块@zmqcherish,@re2
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(searchall|page\?|messageflow) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/statuses/(unread_)?friends(/|_)timeline url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/groups/timeline url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/statuses/(container_timeline|unread_hot_timeline|extend|video_mixtimeline|unread_topic_timeline) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/profile/(me|container_timeline) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/video/(community_tab|remind_info|tiny_stream_video_list) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/search/(finder|container_timeline|container_discover) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/(checkin/show|\!/live/media_homelist|comments/build_comments|container/get_item) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/cardlist url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博国际版_屏蔽hotsearch@re2
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php\?a=hot_search_users url reject-dict
+# > 微博国际版_屏蔽热推荐@re2
+^https?:\/\/m?api\.weibo\.c(n|om)\/\d\/ad\/weibointl\? url reject-dict
+# > 微博国际版_屏蔽searching_info@shiro
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*user&a=get_searching_info url echo-response text/html echo-response https://raw.githubusercontent.com/re2/g/master/weibo_search_info.json
+# > 微博国际版_屏蔽search_topic@shiro
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=search_topic url echo-response text/html echo-response https://raw.githubusercontent.com/re2/g/master/weibo_search_topic.json
+# > 微博国际版_屏蔽开屏广告@re2 
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*get_coopen_ads url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博国际版_屏蔽sdkad@re2
+^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博国际版_趋势顶部Card去广告@re2
+^https?:\/\/weibointl\.api\.weibo\.c(n|om)\/portal\.php.*feed&a=trends url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博国际版_屏蔽用户VIP栏@re2
+^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=user_center url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+# > 微博国际版_热搜处理@re2
+^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=search_topic url script-response-body https://raw.githubusercontent.com/re2/g/master/weibo_json.js
+
 
 # ---(By blackmatrix7)---
 # > Zhihu
